--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "nhsuk-bunyan-logger": "nhsuk/bunyan-logger#1.0.4",
     "normalize.css": "^5.0.0",
     "nunjucks": "^2.5.2",
-    "object.values": "https://registry.npmjs.org/object.values/-/object.values-1.0.4.tgz",
+    "object.values": "^1.0.4",
     "request": "^2.79.0",
-    "require-environment-variables": "https://registry.npmjs.org/require-environment-variables/-/require-environment-variables-1.1.2.tgz",
-    "snyk": "https://registry.npmjs.org/snyk/-/snyk-1.24.6.tgz"
+    "require-environment-variables": "^1.1.2",
+    "snyk": "^1.25.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
