--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,24 @@ sudo: required
 services:
   - docker
 
+env:
+  - DOCKER_COMPOSE_VERSION: 1.11.1
+
+before_install:
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+
 after_success:
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - ./ci-deployment/docker_ci.sh
   - ./ci-deployment/rancher_pr_deploy.sh
 
 script:
-  - docker build --build-arg NODE_ENV=development -t nhsuk/profiles .
-  - docker run -e TRAVIS=true -e TRAVIS_JOB_ID=$TRAVIS_JOB_ID -e TRAVIS_BRANCH=$TRAVIS_BRANCH -e COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN nhsuk/profiles sh -c "cd /code && npm run git-hook && npm run upload-coverage-coveralls"
+  - docker-compose -f docker-compose-tests.yml build travis-tests
+  - docker-compose -f docker-compose-tests.yml run travis-tests
+
+after_script:
+  - docker-compose -f docker-compose-tests.yml down -v
 
