--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 sudo: required
 
+language: node_js
+
 services:
   - docker
 
 env:
-  - DOCKER_COMPOSE_VERSION: 1.11.1
+  - DOCKER_COMPOSE_VERSION=1.11.1
 
 before_install:
   - sudo rm /usr/local/bin/docker-compose
