--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,12 @@ services:
 
 env:
   - DOCKER_COMPOSE_VERSION=1.11.1
+  - DOCKER_REPO=nhsuk/profiles
+  - DOCKER_USERNAME=nhsukautomata
+  - RANCHER_ACCESS_KEY=655696CC96424E6D4DB0
+  - RANCHER_ENVIRONMENT=c2s-dev
+  - RANCHER_TEMPLATE_NAME=c2s-profiles
+  - RANCHER_URL=https://rancher.nhschoices.net
 
 before_install:
   - sudo rm /usr/local/bin/docker-compose
