--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -3,26 +3,24 @@ version: '2.1'
 services:
 
   web-app-test:
-    build:
-      context: .
-      args:
-        NODE_ENV: development
+    extends:
+      file: docker-compose.yml
+      service: base-app
     command: npm run watch-test
     volumes:
-      - .:/code
       - test-deps:/code/node_modules
     environment:
       NODE_ENV: test
+    links:
+    - profiles-db:mongo
 
   travis-tests:
-    build:
-      context: .
-      args:
-        NODE_ENV: development
+    extends:
+      file: docker-compose.yml
+      service: base-app
     command:
       sh -c "npm run git-hook && npm run upload-coverage-coveralls"
     volumes:
-      - .:/code
       - travis-test-deps:/code/node_modules
     environment:
       COVERALLS_REPO_TOKEN: ${COVERALLS_REPO_TOKEN}
@@ -32,6 +30,11 @@ services:
       TRAVIS_BRANCH: ${TRAVIS_BRANCH}
       TRAVIS_COMMIT: ${TRAVIS_COMMIT}
       TRAVIS_JOB_ID: ${TRAVIS_JOB_ID}
+    links:
+    - profiles-db:mongo
+
+  profiles-db:
+    image: "nhsuk/profiles-db:${profiles_db_docker_image_tag-pr-1}"
 
 volumes:
   test-deps:
