--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -2,13 +2,13 @@ version: '2.1'
 
 services:
 
-  web-app-test:
+  tests:
     extends:
       file: docker-compose.yml
       service: base-app
     command: npm run watch-test
     volumes:
-      - test-deps:/code/node_modules
+      - profiles-node_modules:/code/node_modules
     environment:
       NODE_ENV: test
     links:
@@ -21,7 +21,7 @@ services:
     command:
       sh -c "npm run git-hook && npm run upload-coverage-coveralls"
     volumes:
-      - travis-test-deps:/code/node_modules
+      - profiles-node_modules:/code/node_modules
     environment:
       COVERALLS_REPO_TOKEN: ${COVERALLS_REPO_TOKEN}
       NODE_ENV: development
@@ -34,9 +34,9 @@ services:
     - profiles-db:mongo
 
   profiles-db:
-    image: "nhsuk/profiles-db:${profiles_db_docker_image_tag-pr-1}"
+    image: "nhsuk/profiles-db:${profiles_db_docker_image_tag-latest}"
 
 volumes:
-  test-deps:
-  travis-test-deps:
+  profiles-node_modules:
+  profiles-node_modules:
 
