--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   "homepage": "https://github.com/nhsuk/profiles#readme",
   "dependencies": {
     "body-parser": "^1.16.1",
+    "co": "https://registry.npmjs.org/co/-/co-4.6.0.tgz",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.1",
     "helmet": "^3.4.0",
+    "mongodb": "^2.2.24",
     "nhsuk-bunyan-logger": "nhsuk/bunyan-logger#1.0.4",
     "normalize.css": "^5.0.0",
     "nunjucks": "^2.5.2",
