--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -9,6 +9,7 @@ services:
     command: npm run watch-test
     volumes:
       - profiles-tests-node_modules:/code/node_modules
+    user: root
     environment:
       NODE_ENV: test
     links:
@@ -21,6 +22,7 @@ services:
     command: sh -c "npm run travis"
     volumes:
       - profiles-travis-tests-node_modules:/code/node_modules
+    user: root
     environment:
       COVERALLS_REPO_TOKEN: ${COVERALLS_REPO_TOKEN}
       NODE_ENV: development
