--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
   "homepage": "https://github.com/nhsuk/profiles#readme",
   "dependencies": {
     "body-parser": "^1.16.1",
-    "bunyan": "^1.8.8",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.1",
     "helmet": "^3.4.0",
     "mongodb": "^2.2.24",
+    "nhsuk-bunyan-logger": "github:nhsuk/bunyan-logger",
     "node-sass": "^4.5.0",
     "normalize.css": "^5.0.0",
     "nunjucks": "^2.5.2",
