--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -18,8 +18,7 @@ services:
     extends:
       file: docker-compose.yml
       service: base-app
-    command:
-      sh -c "npm run git-hook && npm run upload-coverage-coveralls"
+    command: sh -c "npm run travis"
     volumes:
       - profiles-travis-tests-node_modules:/code/node_modules
     environment:
@@ -39,4 +38,3 @@ services:
 volumes:
   profiles-tests-node_modules:
   profiles-travis-tests-node_modules:
-
