--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "build-css": "./css-build",
     "istanbul": "NODE_ENV=test istanbul",
     "generate-coverage": "npm run istanbul -- cover _mocha -- --recursive",
+    "generate-unit-coverage": "npm run istanbul -- cover _mocha -- --recursive test/unit",
     "check-coverage": "istanbul check-coverage --config .istanbul.yml",
+    "check-unit-coverage": "istanbul check-coverage --config .istanbul.unit.yml",
     "upload-coverage-coveralls": "cat ./coverage/lcov.info | coveralls",
     "watch-dev": "nodemon app.js | ./node_modules/.bin/bunyan & nodemon -e scss -x npm run build-css -- compact",
     "watch-lint": "esw --watch .",
     "watch-test": "npm run test -- --watch --reporter min",
-    "git-hook": "npm run lint && npm run generate-coverage && npm run check-coverage"
+    "precommit": "npm run git-hook",
+    "prepush": "npm run git-hook && npm run snyk-test",
+    "postrewrite": "npm run git-hook",
+    "snyk-test": "snyk test",
+    "git-hook": "npm run lint && npm run generate-unit-coverage && npm run check-unit-coverage",
+    "travis": "npm run lint && npm run generate-coverage && npm run check-coverage && npm run upload-coverage-coveralls"
   },
   "repository": {
     "type": "git",
@@ -56,8 +63,10 @@
     "eslint-plugin-mocha": "^4.3.0",
     "eslint-plugin-react": "^6.10.0",
     "eslint-watch": "^2.1.11",
+    "husky": "^0.13.2",
     "istanbul": "^0.4.3",
     "mocha": "^3.0.2",
     "nodemon": "^1.11.0"
-  }
+  },
+  "snyk": true
 }
