--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     command: npm run watch-dev
     volumes:
       - .:/code
+    user: root
     environment:
       NODE_ENV: ${NODE_ENV-development}
 
@@ -28,4 +29,3 @@ services:
 
 volumes:
   profiles-node_modules:
-
