--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -6,7 +6,7 @@ services:
     extends:
       file: docker-compose.yml
       service: base-app
-    command: npm run watch-test
+    command: npm run test-watch
     volumes:
       - profiles-tests-node_modules:/code/node_modules
     environment:
