--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: .
       args:
         NODE_ENV: development
-    command: npm run watch-dev
+    command: npm run start-watch
     volumes:
       - .:/code
     environment:
