--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "lint-watch": "esw --watch .",
     "postrewrite": "yarn run git-hook",
     "precommit": "yarn run git-hook",
-    "prepush": "yarn run git-hook && yarn run snyk -- test",
+    "prepush": "yarn run git-hook",
     "snyk": "snyk",
+    "snyk-travis": "yarn run snyk -- test --org=nhsuk && yarn run snyk -- monitor --org=nhsuk",
     "start": "node app.js",
     "start-watch": "nodemon app.js | ./node_modules/bunyan/bin/bunyan & nodemon -e scss -x yarn run build-css -- compact",
     "test": "NODE_ENV=test mocha --recursive test",
     "test-watch": "yarn run test -- --watch --reporter min",
-    "travis": "yarn run lint && yarn run generate-coverage && yarn run check-coverage && yarn run upload-coverage-coveralls",
+    "travis": "yarn run lint && yarn run generate-coverage && yarn run check-coverage && yarn run upload-coverage-coveralls && yarn run snyk-travis",
     "upload-coverage-coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
