--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "express": "^4.15.2",
     "helmet": "^3.5.0",
     "mongodb": "^2.2.24",
-    "nhsuk-bunyan-logger": "github:nhsuk/bunyan-logger",
+    "nhsuk-bunyan-logger": "^1.2.2",
     "node-sass": "^4.5.0",
-    "normalize.css": "^5.0.0",
+    "normalize.css": "^6.0.0",
     "nunjucks": "^3.0.0",
     "object.values": "^1.0.4",
     "request": "^2.81.0",
@@ -55,18 +55,18 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "cheerio": "^0.22.0",
-    "coveralls": "^2.12.0",
+    "coveralls": "^2.13.1",
     "eslint": "^3.17.1",
-    "eslint-config-airbnb": "^13.0.0",
+    "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-jsx-a11y": "^2.0.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-mocha": "^4.3.0",
     "eslint-plugin-react": "^6.10.0",
     "eslint-watch": "^3.0.1",
     "husky": "^0.13.2",
     "istanbul": "^0.4.3",
-    "mocha": "^3.0.2",
+    "mocha": "^3.3.0",
     "nodemon": "^1.11.0"
   }
 }
