:construction_worker: changes to travis deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,7 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 
 after_success:
-  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  - ./scripts/ci-deployment/docker_ci.sh
-  - ./scripts/ci-deployment/rancher_pr_deploy.sh
+  - bash ./scripts/ci-deployment/deploy.sh
 
 script:
   - docker-compose -f docker-compose-tests.yml build travis-tests
