--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "object.values": "^1.0.4",
     "request": "^2.81.0",
     "require-environment-variables": "^1.1.2",
-    "snyk": "^1.30.1"
+    "snyk": "^1.30.1",
+    "timekeeper": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
