--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -34,7 +34,7 @@ services:
     - profiles-db:mongo
 
   profiles-db:
-    image: "nhsuk/profiles-db:${profiles_db_docker_image-pr-58}"
+    image: "nhsuk/profiles-db:${profiles_db_docker_image_tag-0.10.0}"
 
 volumes:
   profiles-tests-node_modules:
