--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,13 +3,13 @@
     "node": true,
     "mocha": true
   },
-    "extends": "airbnb",
-    "plugins": [
-      "react",
-      "jsx-a11y",
-      "import",
-      "mocha",
-      "json"
+  "extends": "airbnb",
+  "plugins": [
+    "react",
+    "jsx-a11y",
+    "import",
+    "mocha",
+    "json"
     ],
     "rules": {
       "import/no-extraneous-dependencies": [
@@ -26,6 +26,9 @@
           "exports": "never",
           "functions": "never"
         }],
-      "react/require-extension": "off"
+        "react/require-extension": "off",
+        "newline-after-var": [
+          "error", "always"
+        ]
     }
 }
