--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "express": "^4.15.3",
     "helmet": "^3.6.1",
     "mongodb": "^2.2.28",
-    "nhsuk-bunyan-logger": "^1.3.0",
+    "nhsuk-bunyan-logger": "^1.4.0",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
     "nunjucks": "^3.0.1",
@@ -53,21 +53,22 @@
     "timekeeper": "^1.0.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
+    "chai": "^4.0.2",
     "chai-http": "^3.0.0",
     "cheerio": "^0.22.0",
     "coveralls": "^2.13.1",
     "eslint": "^3.17.1",
     "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-config-nhsuk": "^0.2.0",
+    "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-mocha": "^4.3.0",
-    "eslint-plugin-react": "^7.0.1",
-    "eslint-watch": "^3.0.1",
-    "husky": "^0.13.2",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-mocha": "^4.10.1",
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-watch": "^3.1.1",
+    "husky": "^0.13.4",
     "istanbul": "^0.4.3",
-    "mocha": "^3.4.1",
+    "mocha": "^3.4.2",
     "nodemon": "^1.11.0"
   }
 }
