--- a/rancher-config/docker-compose.yml
+++ b/rancher-config/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     image: "nhsuk/profiles:${DOCKER_IMAGE_TAG}"
     environment:
       NODE_ENV: production
-      HOTJAR_ANALYTICS_TRACKING_ID: ${HOTJAR_ID}
-      GOOGLE_ANALYTICS_TRACKING_ID: ${GOOGLE_ID}
-      WEBTRENDS_ANALYTICS_TRACKING_ID: ${WEBTRENDS_ID}
+      HOTJAR_ANALYTICS_TRACKING_ID: ${HOTJAR_ANALYTICS_TRACKING_ID}
+      GOOGLE_ANALYTICS_TRACKING_ID: ${GOOGLE_ANALYTICS_TRACKING_ID}
+      WEBTRENDS_ANALYTICS_TRACKING_ID: ${WEBTRENDS_ANALYTICS_TRACKING_ID}
       MONGODB_HOST: profiles-db.profiles-db
     labels:
       traefik.enable: stack
