--- a/rancher-config/docker-compose.yml
+++ b/rancher-config/docker-compose.yml
@@ -26,4 +26,4 @@ services:
         splunk-sourcetype: docker
         splunk-source: profiles
         splunk-verify-connection: "false"
-
+        tag: '{{.ImageName}} {{.Name}} {{.FullID}}'
