--- a/rancher-config/docker-compose.yml
+++ b/rancher-config/docker-compose.yml
@@ -27,3 +27,4 @@ services:
         splunk-source: profiles
         splunk-verify-connection: "false"
         tag: '{{.ImageName}} {{.Name}} {{.FullID}}'
+        splunk-format: json
