--- a/package.json
+++ b/package.json
@@ -57,12 +57,12 @@
     "chai-http": "^3.0.0",
     "cheerio": "^0.22.0",
     "coveralls": "^2.13.1",
-    "eslint": "^4.1.1",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-nhsuk": "^0.2.0",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-jsx-a11y": "^5.1.0",
     "eslint-plugin-mocha": "^4.10.1",
     "eslint-plugin-react": "^7.1.0",
     "eslint-watch": "^3.1.1",
@@ -70,5 +70,11 @@
     "istanbul": "^0.4.3",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0"
+  },
+  "greenkeeper": {
+    "ignore": [
+      "eslint",
+      "eslint-plugin-jsx-a11y"
+    ]
   }
 }
