--- a/rancher-config/docker-compose.yml
+++ b/rancher-config/docker-compose.yml
@@ -26,5 +26,5 @@ services:
         splunk-sourcetype: docker
         splunk-source: profiles
         splunk-verify-connection: "false"
-        tag: '{{.ImageName}} {{.Name}} {{.FullID}}'
+        tag: "{{`{{.ImageName}} {{.Name}} {{.FullID}}`}}"
         splunk-format: json
