--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: node_js
-node_js:
-  - node
+node_js: node
+cache: yarn
 
 services:
   - docker
 
 before_install:
+  - yarn global add greenkeeper-lockfile@1
   - pip install docker-compose
   - yarn global add greenkeeper-lockfile@1
+
+before_script: greenkeeper-lockfile-update
 
 after_success:
   - bash ./scripts/ci-deployment/deploy.sh
