--- a/rancher-config/docker-compose.yml
+++ b/rancher-config/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       WEBTRENDS_ANALYTICS_TRACKING_ID: ${WEBTRENDS_ANALYTICS_TRACKING_ID}
       MONGODB_HOST: profiles-db.profiles-db
     labels:
-      traefik.enable: stack
-      traefik.domain: ${TRAEFIK_DOMAIN}
+      traefik.enable: true
+      traefik.frontend.rule: $TRAEFIK_RULE
       traefik.port: 3000
       map-public-http: 3000
       io.rancher.container.pull_image: always
