Remove ci-deployment submodule
adds script/deploy.sh, which checkouts the HEAD of master of the CI-Deployment scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ after_script:
   - greenkeeper-lockfile-upload
   - docker-compose -f docker-compose-tests.yml down -v
 
-after_success: bash ./scripts/ci-deployment/deploy.sh
+after_success: bash ./scripts/deploy.sh
