:running: Remove unnecessary syntax

--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
     "build-css": "./css-build",
     "check-coverage": "istanbul check-coverage --config .istanbul.yml",
     "check-unit-coverage": "istanbul check-coverage --config .istanbul.unit.yml",
-    "generate-unit-coverage": "export TZ=UTC; yarn run istanbul -- cover _mocha -- --recursive test/unit",
-    "generate-coverage": "yarn run istanbul -- cover _mocha -- --recursive",
-    "git-hook": "yarn run lint && yarn run generate-unit-coverage && yarn run check-unit-coverage",
+    "generate-unit-coverage": "export TZ=UTC; yarn istanbul -- cover _mocha -- --recursive test/unit",
+    "generate-coverage": "yarn istanbul -- cover _mocha -- --recursive",
+    "git-hook": "yarn lint && yarn generate-unit-coverage && yarn check-unit-coverage",
     "istanbul": "NODE_ENV=test istanbul",
     "lint": "eslint --ext .js,.json .",
     "lint-watch": "esw --watch .",
-    "postrewrite": "yarn run git-hook",
-    "precommit": "yarn run git-hook",
-    "prepush": "yarn run git-hook",
+    "postrewrite": "yarn git-hook",
+    "precommit": "yarn git-hook",
+    "prepush": "yarn git-hook",
     "snyk": "snyk",
-    "snyk-travis": "yarn run snyk -- test --org=nhsuk && yarn run snyk -- monitor --org=nhsuk",
+    "snyk-travis": "yarn snyk -- test --org=nhsuk && yarn snyk -- monitor --org=nhsuk",
     "start": "node app.js",
-    "start-watch": "nodemon app.js | ./node_modules/bunyan/bin/bunyan & nodemon -e scss -x yarn run build-css -- compact",
+    "start-watch": "nodemon app.js | ./node_modules/bunyan/bin/bunyan & nodemon -e scss -x yarn build-css -- compact",
     "test": "NODE_ENV=test mocha --recursive test",
-    "test-watch": "yarn run test -- --watch --reporter min",
-    "travis": "yarn run lint && yarn run generate-coverage && yarn run check-coverage && yarn run upload-coverage-coveralls && yarn run snyk-travis",
+    "test-watch": "yarn test -- --watch --reporter min",
+    "travis": "yarn lint && yarn generate-coverage && yarn check-coverage && yarn upload-coverage-coveralls && yarn snyk-travis",
     "upload-coverage-coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
