--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,7 @@ before_install:
 
 before_script: greenkeeper-lockfile-update
 
-script:
-  - docker-compose -f docker-compose-tests.yml build travis-tests
-  - docker-compose -f docker-compose-tests.yml run travis-tests
+script: bash ./scripts/test-ci
 
 after_script:
   - greenkeeper-lockfile-upload
