--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       service: base-app
     links:
     - profiles-db:mongo
+    - profiles-db-elastic:es
     ports:
       - 3000:3000
     volumes:
@@ -31,6 +32,9 @@ services:
     image: "nhsuk/profiles-db:${profiles_db_docker_image_tag-0.10.0}"
     expose:
       - "27017"
+
+  profiles-db-elastic:
+    image: "nhsuk/profiles-db-elastic:${profiles_db_docker_image_tag-master}"
 
 volumes:
   profiles-node_modules:
