--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "body-parser": "^1.17.2",
     "compression": "^1.7.0",
     "cookie-parser": "^1.4.3",
+    "elasticsearch": "^13.3.1",
     "express": "^4.15.4",
     "helmet": "^3.8.1",
     "mongodb": "^2.2.31",
