:ship: update docker-compose.yml, remove mongodb from local compose file

--- a/rancher-config/docker-compose.yml
+++ b/rancher-config/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       HOTJAR_ANALYTICS_TRACKING_ID: ${HOTJAR_ANALYTICS_TRACKING_ID}
       GOOGLE_ANALYTICS_TRACKING_ID: ${GOOGLE_ANALYTICS_TRACKING_ID}
       WEBTRENDS_ANALYTICS_TRACKING_ID: ${WEBTRENDS_ANALYTICS_TRACKING_ID}
-      MONGODB_HOST: profiles-db.profiles-db
+      ES_HOST: ${ES_HOST}
       CACHE_TIMEOUT_SECONDS: 1800
     labels:
       traefik.enable: true
