:wrench: allow es index to be configured, use health check for server ready test

--- a/rancher-config/docker-compose.yml
+++ b/rancher-config/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       GOOGLE_ANALYTICS_TRACKING_ID: ${GOOGLE_ANALYTICS_TRACKING_ID}
       WEBTRENDS_ANALYTICS_TRACKING_ID: ${WEBTRENDS_ANALYTICS_TRACKING_ID}
       ES_HOST: ${ES_HOST}
+      ES_INDEX: ${ES_INDEX}
+      ES_PORT: ${ES_PORT}
       CACHE_TIMEOUT_SECONDS: 1800
     labels:
       traefik.enable: true
