:new: update ES image to use latest data snapshot

--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -33,7 +33,7 @@ services:
     - profiles-db-elastic:es
 
   profiles-db-elastic:
-    image: "nhsuk/profiles-db-elastic:${profiles_db_docker_image_tag-master}"
+    image: "nhsuk/profiles-db-elastic:0.4.1-20170930"
 
 volumes:
   profiles-tests-node_modules:
