--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "request": "^2.81.0",
     "require-environment-variables": "^1.1.2",
     "snyk": "^1.38.1",
+    "tenon-api-client": "^0.1.7",
     "timekeeper": "^1.0.0"
   },
   "devDependencies": {
