--- a/rancher-config/docker-compose.yml
+++ b/rancher-config/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       traefik.enable: true
       traefik.frontend.rule: $TRAEFIK_RULE
       traefik.port: 3000
+      prometheus.port: 3000
       map-public-http: 3000
       io.rancher.container.pull_image: always
       io.rancher.scheduler.affinity:host_label_soft: c2s=true
