--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "husky": "^0.14.3",
     "istanbul": "^0.4.3",
     "mocha": "^3.5.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "pa11y": "^4.12.1"
   }
 }
