--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-watch": "^3.1.2",
     "husky": "^0.14.3",
-    "istanbul": "^0.4.3",
+    "istanbul": "^1.1.0-alpha.1",
     "mocha": "^3.5.0",
     "nodemon": "^1.12.0"
   }
