--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prepush": "yarn git-hook && yarn snyk test",
     "start": "node app.js",
     "start-watch": "nodemon app.js | ./node_modules/bunyan/bin/bunyan & nodemon -e scss -x yarn build-css -- compact",
-    "test": "NODE_ENV=test mocha --recursive test",
+    "test": "snyk test && NODE_ENV=test mocha --recursive test",
     "test-ci": "yarn lint && yarn coverage-generate && yarn coverage-check && yarn coverage-upload-coveralls",
     "test-watch": "yarn test -- --watch --reporter min"
   },
