--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prepush": "yarn git-hook && yarn snyk test",
     "start": "node app.js",
     "start-watch": "nodemon app.js | ./node_modules/bunyan/bin/bunyan & nodemon -e scss -x yarn build-css -- compact",
-    "test": "NODE_ENV=test mocha --recursive test && snyk test",
+    "test": "NODE_ENV=test mocha --recursive test",
     "test-ci": "yarn lint && yarn coverage-generate && yarn coverage-check && yarn coverage-upload-coveralls",
     "test-watch": "yarn test -- --watch --reporter min"
   },
@@ -34,11 +34,11 @@
   },
   "homepage": "https://github.com/nhsuk/profiles#readme",
   "dependencies": {
-    "body-parser": "1.18.2",
-    "compression": "1.7.1",
+    "body-parser": "^1.18.2",
+    "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
     "elasticsearch": "^13.3.1",
-    "express": "4.15.5",
+    "express": "^4.15.5",
     "express-prom-bundle": "^3.1.0",
     "helmet": "^3.8.1",
     "nhsuk-bunyan-logger": "^1.4.1",
