--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
     "elasticsearch": "^13.3.1",
-    "express": "^4.15.5",
+    "express": "4.15.5",
     "express-prom-bundle": "^3.1.0",
     "helmet": "^3.8.1",
     "nhsuk-bunyan-logger": "^1.4.1",
