:pig: add brunch
:bug: add call to correct script

:snake: regenerate yarn.lock following rebase

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web app to display useful information about GP practices Pharmacies",
   "main": "server.js",
   "scripts": {
-    "build-css": "./css-build",
+    "brunch-build": "yarn brunch build --production",
     "coverage-check": "istanbul check-coverage --config .istanbul.yml",
     "coverage-check-unit": "istanbul check-coverage --config .istanbul.unit.yml",
     "coverage-generate": "yarn istanbul -- cover _mocha -- --exit --recursive",
@@ -18,7 +18,7 @@
     "precommit": "yarn git-hook",
     "prepush": "yarn git-hook && yarn snyk test",
     "start": "node app.js",
-    "start-watch": "nodemon app.js | ./node_modules/bunyan/bin/bunyan & nodemon -e scss -x yarn build-css -- compact",
+    "start-watch": "yarn brunch watch & nodemon app.js | ./node_modules/bunyan/bin/bunyan",
     "test": "NODE_ENV=test mocha --exit --recursive test",
     "test-ci": "yarn lint && yarn coverage-generate && yarn coverage-check && yarn coverage-upload-coveralls",
     "test-watch": "yarn test -- --watch --reporter min"
@@ -34,13 +34,18 @@
   },
   "homepage": "https://github.com/nhsuk/profiles#readme",
   "dependencies": {
+    "after-brunch": "^0.0.5",
     "body-parser": "^1.18.2",
+    "brunch": "^2.10.10",
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
+    "crypto-js": "^3.1.9-1",
     "elasticsearch": "^13.3.1",
     "express": "4.15.5",
     "express-prom-bundle": "^3.1.0",
+    "fingerprint-brunch": "^2.0.2",
     "helmet": "^3.8.1",
+    "map-replace": "^1.0.2",
     "nhsuk-bunyan-logger": "^1.4.1",
     "node-sass": "^4.5.3",
     "nunjucks": "^3.0.1",
@@ -48,6 +53,7 @@
     "on-headers": "^1.0.1",
     "request": "^2.81.0",
     "require-environment-variables": "^1.1.2",
+    "sass-brunch": "^2.10.4",
     "snyk": "^1.41.1",
     "timekeeper": "^2.0.0"
   },
