--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "dependencies": {
     "after-brunch": "^0.0.5",
     "body-parser": "^1.18.2",
-    "brunch": "2.10.10",
+    "brunch": "^2.10.10",
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
     "crypto-js": "^3.1.9-1",
