:cyclone: Configure Brunch in dev and prod environments
* Use source maps in dev
* Clear old hashed files (for dev)
* Remove default and otherwise unnecessary values

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web app to display useful information about GP practices Pharmacies",
   "main": "server.js",
   "scripts": {
-    "brunch-build": "yarn brunch build --production",
+    "brunch-build": "yarn brunch build",
     "coverage-check": "istanbul check-coverage --config .istanbul.yml",
     "coverage-check-unit": "istanbul check-coverage --config .istanbul.unit.yml",
     "coverage-generate": "yarn istanbul -- cover _mocha -- --exit --recursive",
@@ -18,7 +18,7 @@
     "precommit": "yarn git-hook",
     "prepush": "yarn git-hook && yarn snyk test",
     "start": "node app.js",
-    "start-watch": "yarn brunch watch & nodemon app.js | ./node_modules/bunyan/bin/bunyan",
+    "start-watch": "yarn brunch watch -e development & nodemon app.js | ./node_modules/bunyan/bin/bunyan",
     "test": "NODE_ENV=test mocha --exit --recursive test",
     "test-ci": "yarn lint && yarn coverage-generate && yarn coverage-check && yarn coverage-upload-coveralls",
     "test-watch": "yarn test -- --watch --reporter min"
@@ -38,11 +38,11 @@
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
     "elasticsearch": "^13.3.1",
-    "express": "4.15.5",
+    "express": "4.16.2",
     "express-prom-bundle": "^3.1.0",
     "helmet": "^3.8.1",
     "nhsuk-bunyan-logger": "^1.4.1",
-    "nunjucks": "^3.0.1",
+    "nunjucks": "3.0.1",
     "object.values": "^1.0.4",
     "on-headers": "^1.0.1",
     "request": "^2.81.0",
