--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web app to display useful information about GP practices Pharmacies",
   "main": "server.js",
   "scripts": {
-    "brunch-build": "yarn brunch build",
+    "brunch-build": "yarn install --production=false && yarn brunch build && yarn install",
     "coverage-check": "istanbul check-coverage --config .istanbul.yml",
     "coverage-check-unit": "istanbul check-coverage --config .istanbul.unit.yml",
     "coverage-generate": "yarn istanbul -- cover _mocha -- --exit --recursive",
@@ -34,9 +34,7 @@
   },
   "homepage": "https://github.com/nhsuk/profiles#readme",
   "dependencies": {
-    "after-brunch": "^0.0.5",
     "body-parser": "^1.18.2",
-    "brunch": "^2.10.12",
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
     "crypto-js": "^3.1.9-1",
@@ -52,11 +50,12 @@
     "on-headers": "^1.0.1",
     "request": "^2.81.0",
     "require-environment-variables": "^1.1.2",
-    "sass-brunch": "^2.10.4",
     "snyk": "^1.41.1",
     "timekeeper": "^2.0.0"
   },
   "devDependencies": {
+    "after-brunch": "^0.0.5",
+    "brunch": "^2.10.12",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "cheerio": "^1.0.0-rc.2",
@@ -72,6 +71,7 @@
     "husky": "^0.14.3",
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^4.0.0",
-    "nodemon": "^1.12.0"
+    "nodemon": "^1.12.0",
+    "sass-brunch": "^2.10.4"
   }
 }
