--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "sass-brunch": "^2.10.4",
     "snyk": "^1.41.1",
     "timekeeper": "^2.0.0",
+    "uglify-es": "^3.1.7",
     "uglifyjs-folder": "^1.2.0"
   },
   "devDependencies": {
