:evergreen_tree: Specific versions are locked in yarn.lock

--- a/package.json
+++ b/package.json
@@ -35,45 +35,45 @@
   "homepage": "https://github.com/nhsuk/profiles#readme",
   "dependencies": {
     "after-brunch": "^0.0.5",
-    "body-parser": "^1.18.2",
-    "brunch": "^2.10.12",
-    "compression": "^1.7.1",
-    "cookie-parser": "^1.4.3",
-    "crypto-js": "^3.1.9-1",
-    "elasticsearch": "^13.3.1",
-    "express": "4.16.2",
-    "express-prom-bundle": "^3.1.0",
-    "fingerprint-brunch": "^2.0.2",
-    "helmet": "^3.8.1",
-    "map-replace": "^1.0.2",
-    "nhsuk-bunyan-logger": "^1.4.1",
-    "nunjucks": "3.0.1",
-    "object.values": "^1.0.4",
-    "on-headers": "^1.0.1",
-    "request": "^2.81.0",
-    "require-environment-variables": "^1.1.2",
-    "sass-brunch": "^2.10.4",
-    "snyk": "^1.41.1",
+    "body-parser": "^1.0.0",
+    "brunch": "^2.0.0",
+    "compression": "^1.0.0",
+    "cookie-parser": "^1.0.0",
+    "crypto-js": "^3.0.0",
+    "elasticsearch": "^13.0.0",
+    "express": "4.0.0",
+    "express-prom-bundle": "^3.0.0",
+    "fingerprint-brunch": "^2.0.0",
+    "helmet": "^3.0.0",
+    "map-replace": "^1.0.0",
+    "nhsuk-bunyan-logger": "^1.0.0",
+    "nunjucks": "3.0.0",
+    "object.values": "^1.0.0",
+    "on-headers": "^1.0.0",
+    "request": "^2.0.0",
+    "require-environment-variables": "^1.0.0",
+    "sass-brunch": "^2.0.0",
+    "snyk": "^1.0.0",
     "timekeeper": "^2.0.0",
-    "uglify-es": "^3.1.7",
-    "uglifyjs-folder": "^1.2.0"
+    "uglify-es": "^3.0.0",
+    "uglifyjs-folder": "^1.0.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "^4.0.0",
     "chai-http": "^3.0.0",
     "cheerio": "^1.0.0-rc.2",
     "coveralls": "^3.0.0",
-    "destroy": "^1.0.4",
-    "eslint": "^4.6.1",
+    "destroy": "^1.0.0",
+    "eslint": "^4.0.0",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-config-nhsuk": "^0.7.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-mocha": "^4.11.0",
-    "eslint-watch": "^3.1.2",
-    "husky": "^0.14.3",
+    "eslint-plugin-import": "^2.0.0",
+    "eslint-plugin-json": "^1.0.0",
+    "eslint-plugin-mocha": "^4.0.0",
+    "eslint-watch": "^3.0.0",
+    "husky": "^0.14.0",
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^4.0.0",
-    "nodemon": "^1.12.0"
+    "nodemon": "^1.0.0"
   }
 }
