--- a/package.json
+++ b/package.json
@@ -39,15 +39,15 @@
     "brunch": "^2.0.0",
     "compression": "^1.0.0",
     "cookie-parser": "^1.0.0",
-    "crypto-js": "^3.0.0",
+    "crypto-js": "^3.1.9-1",
     "elasticsearch": "^13.0.0",
-    "express": "4.0.0",
+    "express": "4.16.2",
     "express-prom-bundle": "^3.0.0",
     "fingerprint-brunch": "^2.0.0",
     "helmet": "^3.0.0",
     "map-replace": "^1.0.0",
     "nhsuk-bunyan-logger": "^1.0.0",
-    "nunjucks": "3.0.0",
+    "nunjucks": "3.0.1",
     "object.values": "^1.0.0",
     "on-headers": "^1.0.0",
     "request": "^2.0.0",
