--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "cookie-parser": "^1.4.3",
     "crypto-js": "^3.1.9-1",
     "elasticsearch": "^14.0.0",
-    "express": "4.15.5",
+    "express": "^4.16.0",
     "express-prom-bundle": "^3.2.1",
     "fingerprint-brunch": "^2.0.2",
     "helmet": "^3.9.0",
     "map-replace": "^1.0.2",
     "nhsuk-bunyan-logger": "^1.6.1",
-    "nunjucks": "3.0.1",
+    "nunjucks": "^3.0.1",
     "object.values": "^1.0.4",
     "on-headers": "^1.0.1",
     "request": "^2.83.0",
